--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "verbatimModuleSyntax": false,
     "outDir": "dist"
   },
-  "include": ["src"]
+  "include": ["src", "trash/RecipeIngredient.ts"]
 }
