--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MONGODB_URI= mongodb+srv://musallamjaw:Musallamjaw123@cluster0.oh4suml.mongodb.net/BookManagementDB
+MONGODB_URI=mongodb+srv://musallamjaw:Musallamjaw123@cluster0.oh4suml.mongodb.net/BookManagementDB
 
-PORT = 8000
+PORT=8000
 
-SALT = 10
+SALT=10
 
-JWT_SECRET = a3fc43dfcfdc3dce8ac6
+JWT_SECRET=a3fc43dfcfdc3dce8ac6
